# ExoPlanet_App

./: README.md  pyproject.toml
app_interface/: exoplanet_app.py  exoplanet_app.qrc  exoplanet_app.spec  main.qml
backend/: exoplanet_backend.py
resources/: style.qrc
resources/constants/: __init__.py  constants.py
resources/entry_logs/: kepler-62e.txt  ross-128b.txt  toi-700d.txt  trappist-1e.txt
resources/parameters/: kepler-62e.txt  ross-128b.txt  toi-700d.txt  trappist-1e.txt
